--- a/En construcción.html
+++ b/En construcción.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fotos</title>
+		<title>Página en construcción</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/estilo.css" />
@@ -14,21 +14,26 @@
 	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="logo">Carreras <span>de calle</span></a></div>
+		<header id="header">
 
-				<a href="#menu">Menu</a>
-			</header>
+		</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
 				</ul>
 			</nav>
 
 		<!-- One -->
-
+			<section id="One" class="wrapper style3">
+				<div class="inner">
+					<header class="align-center">
+						<p>Sección a futuro</p>
+						<marquee><h2>Sitio en construcción</h2></marquee>
+					</header>
+				</div>
+			</section>
 
 		<!-- Two -->
 		 	<section id="two" class="wrapper style2">
@@ -37,11 +42,11 @@
 						<div class="content">
 							<header class="align-center">
 								<p>Sección</p>
-								<h2>Mi presentación</h2>
+								<h2>En construcción</h2>
 							</header>
-
-							<img src="images/Castelar.jpg" alt="">
-							<img src="images/21k.jpg" alt="">
+<p>Este sitio será utilizado a futuro para interactuar con los usuarios de manera más directa, complementando la mensajería por correo. <br>
+Volver a <a href="index.html">inicio</a></p>
+<img src="images/Sitio en construcción.jpg" alt="">
 						</div>
 					</div>
 				</div>
