--- a/Mi blog.html
+++ b/Mi blog.html
@@ -40,12 +40,13 @@
 								<h2>Mi presentación</h2>
 							</header>
 <p>¡Hola! Les agradezco su visita a mi sitio web. Mi nombre es Iván Miño, tengo 31 años, soy soltero y estudio licenciatura en gestión de tecnología en la UNLaM. Me quedan 3 materias para poder recibirme.<br>
-Me gusta practicar deportes, pero el que más me gusta es el de correr. Comencé a practicarlo a fines del 2012 por exceso peso. Me vino bien tanto física y mentalmente.<br>
+Me gusta practicar deportes, pero el que más me gusta es el de correr. Comencé a practicarlo a fines del 2012 por exceso de peso. Me vino bien tanto física y mentalmente.<br>
 A fines del 2014, comencé a participar en carreras de calle que, mayormente, se las conoce erroneámente como maratones. Tengo más de 100 carreras hechas, en las cuales 2 son maratones y 8 son medio maratones. El resto se dividen, en su mayoría, en distancias de 5, 8 y 10 kilómetros. Mi primera carrera fue en la localidad de San Justo, partido de la Matanza. La UNLaM (justamente donde soy alumno) organizó dicho evento.<br>
 En el año 2016 logré convertirme en maratonista que si bien nunca fue algo que me propuse, con el paso del tiempo fui cambiando esa mentalidad hasta animarme y correr mis primeros 42 kilómetros.<br>
 Actualmente, me encuentro inactivo debido a la pandemia. Solo espero que regrese todo a la normalidad para volver a las actividades nuevamente.</p>
 <h3>¿CON QUÉ FIN FUE CREADA ESTA PÁGINA?</h3>
-<p>El propósito de esta página es poder brindarles información y alguna novedad sobre las carreras de calle en el AMBA. He visto que muchos corredores desconocen los calendarios anuales y otros que desconocen las carreras que se realizan en distintas zonas. Mi objetivo es poder orientarlos, difundir las gratuitas y reducir sus tiempos de búsqueda.<p>
+<p>El propósito de esta página es poder brindarles información y alguna novedad sobre las carreras de calle en el AMBA. He visto que muchos corredores desconocen los calendarios anuales y otros que desconocen las carreras que se realizan en distintas zonas. Mi objetivo es poder orientarlos, difundir las gratuitas y reducir sus tiempos de búsqueda.<br>
+En el mediano plazo tengo las intenciones de expandir la información con todas las carreras gratuitas de la provincia de Buenos Aires y en el largo plazo, hacer un listado con todas las gratuitas del país. Con esto último, tendré que sumar colaboradores.<p>
 						</div>
 					</div>
 				</div>
