--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	</head>
 	<body>
 
+
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo">Carreras <span>de calle</span></a></div>
@@ -22,9 +23,8 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
 					<li><a href="Mi blog.html">Mi presentación</a></li>
-					<li><a href="Fotos.html">Algo de mí</a></li>
 					<li><a href="Carrera de calle.html">Carrera de calle</a></li>
 					<li><a href="Carrera de trail.html">Carrera de trail</a></li>
 					<li><a href="Calendario.html">Fechas tentativas de carreras</a></li>
@@ -37,7 +37,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/Pista de atletismo.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Les doy la bienvenida a mi sitio web</p>
@@ -46,16 +46,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide02.jpg" alt="" />
-					<div class="inner">
-						<header>
-							<p>Información sobre mí</p>
-							<h2>Historia</h2>
-						</header>
-					</div>
-				</article>
-				<article>
-					<img src="images/slide03.jpg"  alt="" />
+					<img src="images/21K Buenos Aires.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Calendario</p>
@@ -64,16 +55,25 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide04.jpg"  alt="" />
+					<img src="images/Kipchoge.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Organizadores</p>
-							<h2>Carreras pagas</h2>
+							<p>Definición</p>
+							<h2>Carreras de calle</h2>
 						</header>
 					</div>
 				</article>
 				<article>
-					<img src="images/slide05.jpg"  alt="" />
+					<img src="images/Trail running.jpg"  alt="" />
+					<div class="inner">
+						<header>
+							<p>Definición</p>
+							<h2>Carreras de trail</h2>
+						</header>
+					</div>
+				</article>
+				<article>
+					<img src="images/Extras.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Extras</p>
@@ -91,7 +91,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/Info importante.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -109,7 +109,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/Página a construir 2.jpg" alt="center" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -120,7 +120,7 @@
 										Se agradecerán los aportes brindados para ir ampliando los contenidos de la página y de sumar colaboradores que contribuyan al crecimiento de la misma.
 									</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Más info</a>
+										<a href="En construcción.html" class="button alt">Más info</a>
 									</footer>
 								</div>
 							</div>
@@ -135,7 +135,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Otras informaciones</p>
-						<h2>Pueden visitar los links de abajo. Pinchar imágenes</h2>
+						<h2>Pueden visitar los links de abajo. Hacer clic en imágenes</h2>
 					</header>
 				</div>
 			</section>
