--- a/Contacto.html
+++ b/Contacto.html
@@ -42,12 +42,36 @@
 <p>Correo electrónico Outlook: xxxxxx@hotmail.com</p>
 <p>Correo electrónico Gmail: xxxxxx@gmail.com</p>
 <p>Celular: xxx-xx-xxxx-xxxx</p>
-<p>Redes sociales: haciendo clic en los íconos de las mismas.</p>
 <p></p>
+<h3>Contacto</h3>
+<form action="#" method="post">
+	<div class="field half first">
+		<label for="name">Nombre</label>
+		<input name="name" id="name" type="text" placeholder="Nombre">
+	</div>
+	<div class="field half">
+		<label for="email">Correo</label>
+		<input name="email" id="email" type="email" placeholder="Correo">
+	</div>
+	<div class="field">
+		<label for="message">Mensaje</label>
+		<textarea name="message" id="message" rows="6" placeholder="Mensaje"></textarea>
+	</div>
+	<ul class="actions">
+		<li><input value="Enviar Mensaje" class="button" type="submit"></li>
+	</ul>
+</form>
+</div>
+
 						</div>
 					</div>
 				</div>
 			</section>
+<section id="three" class="wrapper style2">
+			<div class="column">
+												<
+</section>
+
 
 		<!-- Footer -->
 			<footer id="footer">
